--- a/tpi-logistica-contenedores/rutas-service/pom.xml
+++ b/tpi-logistica-contenedores/rutas-service/pom.xml
@@ -39,6 +39,17 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         
+        <!-- Spring Security OAuth2 Resource Server -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+        
         <!-- Database -->
         <dependency>
             <groupId>com.h2database</groupId>
